--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta name="author" content="Marcos Ezequiel Herrera" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&display=swap" rel="stylesheet">
     <title>React monsters App</title>
   </head>
   <body>
